add:  activation code
