# src/controller/auth.controller.ts
@@ -22,7 +22,27 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   userName: Yup.string().required(),
   email: Yup.string().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password harus minimal 6 karakter")
+    .test(
+      "minimal-terdapat-satu-huruf-besar",
+      "Password minimal terdapat 1 huruf besar",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test(
+      "minimal-terdapat-satu-angka",
+      "Password minimal terdapat angka",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+      }
+    ),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password tidak sama"),
@@ -86,6 +106,7 @@ export default {
             userName: identifier,
           },
         ],
+        isActive: true,
       });
 
       if (!userbyIdentifier) {
@@ -141,6 +162,39 @@ export default {
       res.status(200).json({
         message: "berhasil mengambil user profile",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tag = ['Auth']
+     #swagger.requestBody = {
+     required: true,
+     schema: {$ref: "#/components/schemas/ActivationRequest"}}
+     */
+    try {
+      const { code } = req.body as { code: string };
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+      res.status(200).json({
+        message: "user telah teraktivasi",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
